# property-tax-data-platform

./: .artifact-allowlist  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CONTRIBUTING.md  DATA_LICENSE.md  Makefile  NOTICE  README.md  pyproject.toml
.ai/codex/: 01-build-codex-image.sh  02-run-prepr-review-docker.sh  03-smoke-test.sh  04-validate-observability-export.sh  05-test-observability-export-fixtures.sh  06-qa-observability.sh  07-build-countyforge-plan-image.sh  08-run-countyforge-plan-docker.sh  09-run-countyforge-implement-docker.sh  10-build-countyforge-implement-image.sh  implement.Dockerfile
.ai/contexts/: .gitkeep
.ai/policies/: countyforge-github-authorization.v1.json  countyforge-github-execution.v1.json  countyforge-implementation-commands.v1.json  countyforge-implementation-paths.v1.json
.ai/profiles/: fix.targeted-write.v1.json  implement.workspace-write.v1.json  plan.read-only.v1.json  review.packet-only.v1.json  validate.deterministic.v1.json
.ai/prompts/: claude-fix-from-review.md  codex-dev-loop-hardening.md  codex-prepr-review.md  countyforge-fix.v1.md  countyforge-implement.v1.md  countyforge-plan.v1.md  countyforge-validate.v1.md
.ai/providers/: catalog.v1.json
.ai/schemas/: codex-prepr-review.schema.json  codex-runner-event.schema.json  countyforge-fix-result.schema.json  countyforge-github-authorization-policy.schema.json  countyforge-github-command.schema.json  countyforge-github-event.schema.json  countyforge-github-execution-policy.schema.json  countyforge-github-lease.schema.json  countyforge-github-state.schema.json  countyforge-github-transition.schema.json  countyforge-github-trigger.schema.json  countyforge-implementation-command-event.schema.json  countyforge-implementation-command-registry.schema.json  countyforge-implementation-context-manifest.schema.json  countyforge-implementation-eligibility.schema.json  countyforge-implementation-packet.schema.json  countyforge-implementation-publication-manifest.schema.json  countyforge-implementation-result.schema.json  countyforge-implementation-revision.schema.json  countyforge-implementation-task-plan.schema.json  countyforge-profile.schema.json  (+14 more)
.github/: AGENTS.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md
dags/: AGENTS.md  README.md
docs/: AGENTS.md  README.md
libs/: AGENTS.md  README.md
libs/property-tax-adapters/: AGENTS.md  README.md  pyproject.toml
libs/property-tax-adapters/src/property_tax_adapters/: __init__.py
libs/property-tax-adapters/src/property_tax_adapters/sources/: __init__.py
libs/property-tax-adapters/src/property_tax_adapters/sources/texas/: __init__.py  collin.py  dallas.py  denton.py  ellis.py  registry.py  rockwall.py  tarrant.py
libs/property-tax-application/: README.md  pyproject.toml
libs/property-tax-application/src/property_tax_application/: __init__.py  sources.py
libs/property-tax-domain/: README.md  pyproject.toml
libs/property-tax-domain/src/property_tax_domain/: __init__.py  counties.py
openspec/: AGENTS.md  README.md  config.yaml
scripts/: __init__.py  check_doc_links.py  check_repository_artifacts.py  gh
services/: AGENTS.md  README.md
services/ingestion-worker/: README.md  pyproject.toml
services/ingestion-worker/src/property_tax_ingestion/: __init__.py  cli.py
tools/: AGENTS.md  README.md
tools/countyforge-github/: AGENTS.md  README.md  pyproject.toml
tools/countyforge-github/src/countyforge_github/: __init__.py  authorization.py  cli.py  commands.py  contracts.py  control.py  errors.py  github_api.py  identity.py  implementation.py  leases.py  maintenance.py  observability.py  orchestrator.py  planning.py  redaction.py  requests.py  results.py  state.py  workflow_control.py
tools/countyforge-github/tests/: conftest.py  test_authorization_identity.py  test_commands.py  test_github_api.py  test_implementation.py  test_observability.py  test_orchestrator.py  test_planning.py  test_requests.py  test_results.py  test_state_leases.py  test_workflow_policy.py
tools/countyforge-runner/: README.md  pyproject.toml
tools/countyforge-runner/src/countyforge_runner/: __init__.py  __main__.py  cli.py  command_broker.py  contracts.py  errors.py  evidence.py  executor.py  paths.py  planning_policy.py  provider_proxy.py  resolver.py
tools/countyforge-runner/tests/: conftest.py  test_command_broker.py  test_compatibility.py  test_execution.py  test_planning_policy.py  test_resolution.py  test_two_roots.py
(+88 files in other folders)
