[project]
name = "property-tax-adapters"
version = "0.1.0"
description = "Outbound source and persistence adapters for the Property Tax Data Platform."
requires-python = ">=3.12,<3.13"
dependencies = [
    "property-tax-application",
    "property-tax-domain",
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/property_tax_adapters"]
