[project]
name = "property-tax-domain"
version = "0.1.0"
description = "Infrastructure-free domain types for the Property Tax Data Platform."
requires-python = ">=3.12,<3.13"
dependencies = []

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/property_tax_domain"]
