[project]
name = "property-tax-ingestion-worker"
version = "0.1.0"
description = "Inbound CLI and runtime composition for property-tax ingestion."
license = "Apache-2.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "property-tax-adapters",
    "property-tax-application",
    "property-tax-domain",
]

[project.scripts]
property-tax-ingestion = "property_tax_ingestion.cli:main"

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/property_tax_ingestion"]
